fix: functionality and add sticky header in kassa

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     <application
         android:label="flutter_valuta"
         android:name="${applicationName}"
-        android:icon="@drawable/splash_icon"
+        android:icon="@mipmap/ic_launcher"
         android:enableOnBackInvokedCallback="true"
         >
         <activity
