--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,14 @@ dependencies:
   cupertino_icons: ^1.0.8
   english_words: ^4.0.0
   provider: ^6.0.0
+  flutter_sticky_header: ^0.7.0
+  intl: ^0.18.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -48,6 +52,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.10.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "E:/projects/flutter_valuta/lib/customs/splash_icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
