--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,10 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.0.0
   flutter_sticky_header: ^0.7.0
-  intl: ^0.18.0
+  intl: ^0.19.0
+  flutter_localizations:
+    sdk: flutter
+  syncfusion_flutter_charts: ^28.1.37
 
 
 dev_dependencies:
